--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 
 </head>
 
-<header>
-
-    <a href=""> Início</a>
-    <a href=""> Personagem</a>
-    <a href=""> Sobre nós</a>
-    <a href=""> Contato</a>
-
-</header>
-
-
 <body>
+    <header>
+
+        <a href=""> Início</a>
+        <a href=""> Personagem</a>
+        <a href=""> Sobre nós</a>
+        <a href=""> Contato</a>
     
+    </header>
+    <p>O Rodrigo não é teimoso, teimoso é quem teima com ele.</p>
 </body>
 </html>
