--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>One Piece</title>
-
 </head>
-
-<header>
-
-    <a href=""> Início</a>
-    <a href=""> Personagem</a>
-    <a href=""> Sobre nós</a>
-    <a href=""> Contato</a>
-
-</header>
-
-
 <body>
-    
+    <header class="menu">
+        <a href=""> Início</a>
+        <a href=""> Personagem</a>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
