--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <header class="menu">
+        <img src="assets/imagens/logo-one piece.png" alt="Logo One Piece">
         <a href=""> Início</a>
         <a href=""> Personagem</a>
     </header>
-    <main>
-
+    <main background="assets/imagens/backgroun.png">
+        <h1>Monkey D. Luffy</h1>
+        <p>Monkey D. Luffy é o carismático capitão dos Piratas do Chapéu de Palha. Usuário da Gomu Gomu no Mi, ele tem um corpo elástico e busca se tornar o Rei dos Piratas, encontrando o lendário tesouro One Piece. </p>
+        <button>Saiba Mais</button>
+        <img src="assets/imagens/image_6.webp" alt="Monkey D. Luffy">
     </main>
 </body>
 </html>
