--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>One Piece</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <header class="menu">
-        <img src="assets/imagens/logo-one piece.png" alt="Logo One Piece">
-        <a href=""> Início</a>
-        <a href=""> Personagem</a>
+      <img src="assets/imagens/logo-one piece.png" alt="Logo One Piece" />
+      <a href=""> Início</a>
+      <a href=""> Personagem</a>
+      <a href=""> Outros</a>
+
+      <button class="btn__header">Contato</button>
     </header>
-    <main background="assets/imagens/backgroun.png">
+
+    <div>
+
+      <div class="div__left">
+
         <h1>Monkey D. Luffy</h1>
-        <p>Monkey D. Luffy é o carismático capitão dos Piratas do Chapéu de Palha. Usuário da Gomu Gomu no Mi, ele tem um corpo elástico e busca se tornar o Rei dos Piratas, encontrando o lendário tesouro One Piece. </p>
+        <p>
+          Monkey D. Luffy é o carismático capitão dos Piratas do Chapéu de
+          Palha. Usuário da Gomu Gomu no Mi, ele tem um corpo elástico e busca
+          se tornar o Rei dos Piratas, encontrando o lendário tesouro One Piece.
+        </p>
+
         <button>Saiba Mais</button>
-        <img src="assets/imagens/image_6.webp" alt="Monkey D. Luffy">
-    </main>
-</body>
+
+      </div>
+
+      <div class="div__right">
+        <img
+          src="assets/imagens/image_6.webp"
+          alt="Monkey D. Luffy"
+          class="img__luffy"/>
+      </div>
+    </div>
+  </body>
 </html>
