--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button class="btn__header">Contato</button>
     </header>
 
-    <div>
+    <div class="wrap">
 
       <div class="div__left">
 
@@ -28,7 +28,7 @@
           se tornar o Rei dos Piratas, encontrando o lendário tesouro One Piece.
         </p>
 
-        <button>Saiba Mais</button>
+        <button class="btn__main">Saiba Mais</button>
 
       </div>
 
